new note for svd nmf

--- a/basic_nlp.ipynb
+++ b/basic_nlp.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,60 +64,13 @@
        " 'right']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "analyze = CountVectorizer().build_analyzer()\n",
-    "analyze(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['this',\n",
-       " 'is',\n",
-       " 'a',\n",
-       " 'test',\n",
-       " '!',\n",
-       " '!',\n",
-       " '!',\n",
-       " 'this',\n",
-       " 'is',\n",
-       " 'another',\n",
-       " 'test',\n",
-       " '!',\n",
-       " 'test',\n",
-       " '(',\n",
-       " 'test',\n",
-       " ')',\n",
-       " '!',\n",
-       " 'let',\n",
-       " \"'\",\n",
-       " 's',\n",
-       " 'go',\n",
-       " '.',\n",
-       " '\"',\n",
-       " 'yeah',\n",
-       " ',',\n",
-       " 'right',\n",
-       " '\"']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "analyze = CountVectorizer(tokenizer=tokenize).build_analyzer()\n",
     "analyze(test)"
    ]
   },
@@ -130,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,26 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vec = CountVectorizer(tokenizer=tokenize)\n",
+    "vec = CountVectorizer()\n",
     "temp = vec.fit_transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 73)"
+       "(3, 58)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -260,82 +213,67 @@
     {
      "data": {
       "text/plain": [
-       "{'!': 0,\n",
-       " '\"': 1,\n",
-       " \"'\": 2,\n",
-       " '(': 3,\n",
-       " ')': 4,\n",
-       " ',': 5,\n",
-       " '-': 6,\n",
-       " '.': 7,\n",
-       " '0': 8,\n",
-       " '1': 9,\n",
-       " 'a': 10,\n",
-       " 'accurate': 11,\n",
-       " 'and': 12,\n",
-       " 'another': 13,\n",
-       " 'are': 14,\n",
-       " 'big': 15,\n",
-       " 'both': 16,\n",
-       " 'cats': 17,\n",
-       " 'changed': 18,\n",
-       " 'changes': 19,\n",
-       " 'cute': 20,\n",
-       " 'encourage': 21,\n",
-       " 'find': 22,\n",
-       " 'go': 23,\n",
-       " 'however': 24,\n",
-       " 'if': 25,\n",
-       " 'in': 26,\n",
-       " 'is': 27,\n",
-       " 'isn': 28,\n",
-       " 'it': 29,\n",
-       " 'justice': 30,\n",
-       " 'labels': 31,\n",
-       " 'let': 32,\n",
-       " 'loss': 33,\n",
-       " 'made': 34,\n",
-       " 'may': 35,\n",
-       " 'model': 36,\n",
-       " 'of': 37,\n",
-       " 'one': 38,\n",
-       " 'our': 39,\n",
-       " 'ourselves': 40,\n",
-       " 'part': 41,\n",
-       " 'parts': 42,\n",
-       " 'replaces': 43,\n",
-       " 'resilient': 44,\n",
-       " 'result': 45,\n",
-       " 'right': 46,\n",
-       " 's': 47,\n",
-       " 'sentence': 48,\n",
-       " 'small': 49,\n",
-       " 'space': 50,\n",
-       " 'stable': 51,\n",
-       " 'started': 52,\n",
-       " 't': 53,\n",
-       " 'test': 54,\n",
-       " 'that': 55,\n",
-       " 'the': 56,\n",
-       " 'then': 57,\n",
-       " 'they': 58,\n",
-       " 'this': 59,\n",
-       " 'to': 60,\n",
-       " 'unchanged': 61,\n",
-       " 'very': 62,\n",
-       " 'want': 63,\n",
-       " 'was': 64,\n",
-       " 'we': 65,\n",
-       " 'weight': 66,\n",
-       " 'weights': 67,\n",
-       " 'with': 68,\n",
-       " 'word': 69,\n",
-       " 'yeah': 70,\n",
-       " '‘': 71,\n",
-       " '’': 72}"
+       "{'this': 46,\n",
+       " 'is': 16,\n",
+       " 'test': 41,\n",
+       " 'another': 2,\n",
+       " 'let': 21,\n",
+       " 'go': 12,\n",
+       " 'yeah': 57,\n",
+       " 'right': 35,\n",
+       " 'started': 40,\n",
+       " 'one': 27,\n",
+       " 'sentence': 36,\n",
+       " 'and': 1,\n",
+       " 'replaces': 32,\n",
+       " 'word': 56,\n",
+       " 'with': 55,\n",
+       " 'cats': 6,\n",
+       " 'are': 3,\n",
+       " 'cute': 9,\n",
+       " 'to': 47,\n",
+       " 'justice': 19,\n",
+       " 'then': 44,\n",
+       " 'they': 45,\n",
+       " 'made': 23,\n",
+       " 'labels': 20,\n",
+       " 'if': 14,\n",
+       " 'it': 18,\n",
+       " 'was': 51,\n",
+       " 'unchanged': 48,\n",
+       " 'changed': 7,\n",
+       " 'however': 13,\n",
+       " 'we': 52,\n",
+       " 'may': 24,\n",
+       " 'find': 11,\n",
+       " 'ourselves': 29,\n",
+       " 'in': 15,\n",
+       " 'part': 30,\n",
+       " 'of': 26,\n",
+       " 'the': 43,\n",
+       " 'weight': 53,\n",
+       " 'space': 38,\n",
+       " 'that': 42,\n",
+       " 'isn': 17,\n",
+       " 'very': 49,\n",
+       " 'resilient': 33,\n",
+       " 'small': 37,\n",
+       " 'changes': 8,\n",
+       " 'weights': 54,\n",
+       " 'result': 34,\n",
+       " 'big': 4,\n",
+       " 'loss': 22,\n",
+       " 'want': 50,\n",
+       " 'encourage': 10,\n",
+       " 'our': 28,\n",
+       " 'model': 25,\n",
+       " 'parts': 31,\n",
+       " 'both': 5,\n",
+       " 'accurate': 0,\n",
+       " 'stable': 39}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,35 +284,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "# vec.get_feature_names() # get keys from vocabulary_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[5, 2, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 1,\n",
-       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0,\n",
-       "        0, 0, 0, 0, 1, 0, 0]])"
+       "['accurate',\n",
+       " 'and',\n",
+       " 'another',\n",
+       " 'are',\n",
+       " 'big',\n",
+       " 'both',\n",
+       " 'cats',\n",
+       " 'changed',\n",
+       " 'changes',\n",
+       " 'cute',\n",
+       " 'encourage',\n",
+       " 'find',\n",
+       " 'go',\n",
+       " 'however',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'isn',\n",
+       " 'it',\n",
+       " 'justice',\n",
+       " 'labels',\n",
+       " 'let',\n",
+       " 'loss',\n",
+       " 'made',\n",
+       " 'may',\n",
+       " 'model',\n",
+       " 'of',\n",
+       " 'one',\n",
+       " 'our',\n",
+       " 'ourselves',\n",
+       " 'part',\n",
+       " 'parts',\n",
+       " 'replaces',\n",
+       " 'resilient',\n",
+       " 'result',\n",
+       " 'right',\n",
+       " 'sentence',\n",
+       " 'small',\n",
+       " 'space',\n",
+       " 'stable',\n",
+       " 'started',\n",
+       " 'test',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'then',\n",
+       " 'they',\n",
+       " 'this',\n",
+       " 'to',\n",
+       " 'unchanged',\n",
+       " 'very',\n",
+       " 'want',\n",
+       " 'was',\n",
+       " 'we',\n",
+       " 'weight',\n",
+       " 'weights',\n",
+       " 'with',\n",
+       " 'word',\n",
+       " 'yeah']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp[0].toarray()"
+    "vec.get_feature_names()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 1,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 3, 0, 0,\n",
+       "        0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 2, 1, 2, 0, 0, 1, 1, 0, 2, 0, 0, 0, 0, 2, 0, 0, 0, 2, 1, 1, 0,\n",
+       "        0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0,\n",
+       "        1, 1, 0, 1, 1, 0, 0, 2, 0, 0, 0, 1, 1, 0],\n",
+       "       [1, 1, 0, 1, 1, 1, 0, 0, 2, 0, 1, 2, 0, 1, 0, 2, 1, 1, 0, 0, 0, 0,\n",
+       "        1, 0, 2, 1, 2, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 2, 1, 0, 0, 3, 4,\n",
+       "        0, 0, 0, 4, 0, 1, 1, 0, 2, 2, 1, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.toarray() # convert collection of text documents to matrix of token counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "vec = TfidfVectorizer(min_df=.2,max_df=.5,ngram_range=(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = ['This is a test!!! This is another test! Test !Let\\'s go. \\\"Yeah, right\\\" ',\n",
+    "       'Started one sentence, and replaces 1 word with another (‘cats are cute’ to ‘justice are cute’). Then they made labels 1 if it was unchanged, and 0 if it was changed',\n",
+    "        'However, we may find ourselves in a part of the weight space that isn\\'t very resilient - that is, small changes to the weights may result in big changes to the loss. We want to encourage our model to find parts of the weight space that are both accurate and stable'\n",
+    "       ]\n",
+    "texts=[\n",
+    "    'good movie', 'not a good movie','did not like', 'i like it','good one'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<3x129 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 129 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = vec.fit_transform(test)\n",
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accurate</th>\n",
+       "      <th>accurate and</th>\n",
+       "      <th>and if</th>\n",
+       "      <th>and replaces</th>\n",
+       "      <th>and stable</th>\n",
+       "      <th>another cats</th>\n",
+       "      <th>another test</th>\n",
+       "      <th>are both</th>\n",
+       "      <th>are cute</th>\n",
+       "      <th>big</th>\n",
+       "      <th>...</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>weight space</th>\n",
+       "      <th>weights</th>\n",
+       "      <th>weights may</th>\n",
+       "      <th>with</th>\n",
+       "      <th>with another</th>\n",
+       "      <th>word</th>\n",
+       "      <th>word with</th>\n",
+       "      <th>yeah</th>\n",
+       "      <th>yeah right</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.182574</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.182574</td>\n",
+       "      <td>0.182574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.251976</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.125988</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.171499</td>\n",
+       "      <td>0.171499</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.085749</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 129 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accurate  accurate and    and if  and replaces  and stable  another cats  \\\n",
+       "0  0.000000      0.000000  0.000000      0.000000    0.000000      0.000000   \n",
+       "1  0.000000      0.000000  0.125988      0.125988    0.000000      0.125988   \n",
+       "2  0.085749      0.085749  0.000000      0.000000    0.085749      0.000000   \n",
+       "\n",
+       "   another test  are both  are cute       big     ...        weight  \\\n",
+       "0      0.182574  0.000000  0.000000  0.000000     ...      0.000000   \n",
+       "1      0.000000  0.000000  0.251976  0.000000     ...      0.000000   \n",
+       "2      0.000000  0.085749  0.000000  0.085749     ...      0.171499   \n",
+       "\n",
+       "   weight space   weights  weights may      with  with another      word  \\\n",
+       "0      0.000000  0.000000     0.000000  0.000000      0.000000  0.000000   \n",
+       "1      0.000000  0.000000     0.000000  0.125988      0.125988  0.125988   \n",
+       "2      0.171499  0.085749     0.085749  0.000000      0.000000  0.000000   \n",
+       "\n",
+       "   word with      yeah  yeah right  \n",
+       "0   0.000000  0.182574    0.182574  \n",
+       "1   0.125988  0.000000    0.000000  \n",
+       "2   0.000000  0.000000    0.000000  \n",
+       "\n",
+       "[3 rows x 129 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(features.todense(),columns = vec.get_feature_names())"
    ]
   }
  ],
@@ -394,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
