tiny note on w2v

--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -1000,7 +1000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more on randomized SVD, check out my PyBay 2017 talk.\n",
+    "For more on randomized SVD, check out my PyBay 2017 talk: https://www.youtube.com/watch?v=7i6kBz1kZ-A&list=PLtmWHNX-gukLQlMvtRJ19s7-8MrnRV6h6&index=7\n",
     "\n",
     "For significantly more on randomized SVD, check out the Computational Linear Algebra course: https://github.com/fastai/numerical-linear-algebra"
    ]
