--- a/stanford_1.ipynb
+++ b/stanford_1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://www.youtube.com/watch?v=8rXD5-xhemo&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=2&t=2433s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The goal of this course: to represent the meaning of words"
    ]
   },
@@ -21,9 +28,7 @@
    "metadata": {},
    "source": [
     "- Bag-of-words (one-hot representation) cannot capture similarity between words (since each word vector are orthogonal, aka dot product is 0, aka different position of '1' => no natural notion of similarity\n",
-    "- WordNet can help, but it has its cons (see above)\n",
-    "\n",
-    "**=> vector needs to learn to encode the similarity themselves**\n"
+    "- WordNet can help, but it has its cons (see above)\n"
    ]
   },
   {
@@ -37,7 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Word meaning is given by its context: other words that frequently appear close-by\n",
+    "Because of all the cons above, **vector needs to learn to encode the similarity themselves**\n",
+    "\n",
+    "- Word meaning is given by its context: other words that frequently appear close-by (position before and after)\n",
     "- With this, you can represent a word using a vector with positive/negative values(not one-hot), aka word vectors, aka word embeddings. Length of these vectors can go from 50 to 300, depends on the computational resources."
    ]
   },
@@ -49,11 +56,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Idea:\n",
+    "- for each word in a text (center word c), look at the context words (o) around c.\n",
+    "- Calculate **P(o|c)** using **word vectors' similarity** for c and o\n",
+    "- Try to maximize this probability, aka **by adjusting word vector matrix** => we need to keep updating this matrix using some metric/loss (see below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/word2vec.png)"
+   ]
   }
  ],
  "metadata": {
