Stanford exerise 1: coocurrence matrix with window size and use truncated SVD to plot

--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the normal SVD spit out too many topics. In NMF you can adjust the # of topics so it will only calculate the subset ot topics you are interested in.\n",
+    "the normal SVD spit out too many topics. In NMF you can adjust the # of topics so it will only calculate the subset of topics you are interested in.\n",
     "\n",
     "Truncated SVD will try to achieve what NMF does: We are just interested in the vectors corresponding to the largest singular values.\n",
     "\n",
