some glove/w2v writting answers

--- a/stanford_w2c_formula_and_params.ipynb
+++ b/stanford_w2c_formula_and_params.ipynb
@@ -62,7 +62,7 @@
     "Idea:\n",
     "- for each word in a text (center word c), look at the context words/neighbor words (o) around c.\n",
     "- Calculate **P(o|c)** using **word vectors' similarity** for c and o\n",
-    "- The idea is to optimize/update this word vector matrix (parameters) using gradient descent on some loss function (below) so that the CORRECT neighbor word vectors (of a said center word) are updated in a way that maximize the probability"
+    "    - The idea is to optimize/update this word vector matrix (parameters) using gradient descent on some loss function (below) so that the **CORRECT NEIGHBOR WORD VECTORS (related to a given center word)** are updated in a way that maximize the probability"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "source": [
     "**Conclusion**: if neighbor word (n) and center word (c) have **high similarity (from dot product OF TWO DIFFERENT VERSION**: **neighbor (NOT CENTER) version of neighbor word** and **center version of center word)** => they are **close together in the vector space aka they have similar meaning**, P(n|c) is big.\n",
     "\n",
-    "(because 2 center version of 2 words should be similar in meaning, like king and prince, instead of how good of neighbors they can be)\n",
+    "LOL REALLY??=> (because 2 center version of 2 words should be similar in meaning, like king and prince, instead of how good of neighbors they can be)\n",
     "\n",
     "\n",
     "Or in another word, **Softmax is used on the dot product to calculate P(n|c)**: bigger dot product, higher softmax => higher P(n|c) "
@@ -144,27 +144,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Formula for derivative of loss function"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "https://youtu.be/8rXD5-xhemo?t=4316"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "or: derivative of P(n|c) = nn - sum-w-in-vocab( P(w|c) ) * wn"
    ]
@@ -172,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
