--- a/stanford_w2c_formula_and_params.ipynb
+++ b/stanford_w2c_formula_and_params.ipynb
@@ -62,7 +62,7 @@
     "Idea:\n",
     "- for each word in a text (center word c), look at the context words/neighbor words (o) around c.\n",
     "- Calculate **P(o|c)** using **word vectors' similarity** for c and o\n",
-    "    - The idea is to optimize/update this word vector matrix (parameters) using gradient descent on some loss function (below) so that the **CORRECT NEIGHBOR WORD VECTORS (related to a given center word)** are updated in a way that maximize the probability"
+    "    - The idea is to optimize/update this word vector matrix (parameters) using gradient descent on some loss function (below) so that the **CORRECT NEIGHBOR WORD VECTORS (related to a given center word) are updated in a way that maximize the probability** "
    ]
   },
   {
